EasyPlayscript.Core/core/playscript/definition/PlayscriptContentParser.g4
parser grammar PlayscriptContentParser;

options { tokenVocab = PlayscriptContentLexer; }

@header { namespace EasyPlayscript.Parsing; }

// ─── Entry Points ───────────────────────────────────────────────────────────

scriptContent
    : page (pageBreak page)* EOF
    ;

textContent
    : textParagraph (BLANK_LINE textParagraph)* EOF
    ;

// ─── Content Structure ──────────────────────────────────────────────────────

page
    : paragraph (BLANK_LINE paragraph)*
    ;

paragraph
    : line (SINGLE_NEWLINE line)*
    ;

line
    : segment (PLUS segment)*
    ;

segment
    : (TEXT | consumerCall)+
    ;

textParagraph
    : textLine (SINGLE_NEWLINE textLine)*
    ;

textLine
    : (TEXT | SLASH | consumerCall)+
    ;

pageBreak
    : (SINGLE_NEWLINE | BLANK_LINE)* SLASH (SINGLE_NEWLINE | BLANK_LINE)*
    ;

consumerCall
    : AT qualifiedName LPAREN (argument (COMMA argument)*)? RPAREN
    ;

qualifiedName
    : IDENTIFIER (DOT IDENTIFIER)*
    ;

argument
    : STRING_LITERAL
    | INTEGER_LITERAL
    | FLOAT_LITERAL
    | BOOLEAN_LITERAL
    ;
