EasyPlayscript.Core/Parsing/Visitor/Content/PlayscriptContentParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/Myriad-s-Projects/EasyPlayscript/EasyPlayscript.Core/core/playscript/definition/PlayscriptContentParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

 namespace EasyPlayscript.Parsing; 
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class PlayscriptContentParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		AT=1, COMMENT=2, LPAREN=3, RPAREN=4, STRING_LITERAL=5, IDENTIFIER=6, COMMA=7, 
		INTEGER_LITERAL=8, FLOAT_LITERAL=9, BOOLEAN_LITERAL=10, PLUS=11, DOT=12, 
		BLANK_LINE=13, SINGLE_NEWLINE=14, SLASH=15, TEXT=16, C_WS=17, S_PLUS=18, 
		C_LPAREN=19, C_RPAREN=20, C_DOT=21, C_COMMA=22;
	public const int
		RULE_scriptContent = 0, RULE_textContent = 1, RULE_page = 2, RULE_paragraph = 3, 
		RULE_line = 4, RULE_segment = 5, RULE_textParagraph = 6, RULE_textLine = 7, 
		RULE_pageBreak = 8, RULE_consumerCall = 9, RULE_qualifiedName = 10, RULE_argument = 11;
	public static readonly string[] ruleNames = {
		"scriptContent", "textContent", "page", "paragraph", "line", "segment", 
		"textParagraph", "textLine", "pageBreak", "consumerCall", "qualifiedName", 
		"argument"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "'/'", null, null, "'+'", "'('", "')'", "'.'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AT", "COMMENT", "LPAREN", "RPAREN", "STRING_LITERAL", "IDENTIFIER", 
		"COMMA", "INTEGER_LITERAL", "FLOAT_LITERAL", "BOOLEAN_LITERAL", "PLUS", 
		"DOT", "BLANK_LINE", "SINGLE_NEWLINE", "SLASH", "TEXT", "C_WS", "S_PLUS", 
		"C_LPAREN", "C_RPAREN", "C_DOT", "C_COMMA"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PlayscriptContentParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PlayscriptContentParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PlayscriptContentParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PlayscriptContentParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PageContext[] page() {
			return GetRuleContexts<PageContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PageContext page(int i) {
			return GetRuleContext<PageContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PlayscriptContentParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PageBreakContext[] pageBreak() {
			return GetRuleContexts<PageBreakContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PageBreakContext pageBreak(int i) {
			return GetRuleContext<PageBreakContext>(i);
		}
		public ScriptContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScriptContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContentContext scriptContent() {
		ScriptContentContext _localctx = new ScriptContentContext(Context, State);
		EnterRule(_localctx, 0, RULE_scriptContent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			page();
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 57344L) != 0)) {
				{
				{
				State = 25;
				pageBreak();
				State = 26;
				page();
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 33;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TextParagraphContext[] textParagraph() {
			return GetRuleContexts<TextParagraphContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextParagraphContext textParagraph(int i) {
			return GetRuleContext<TextParagraphContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PlayscriptContentParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BLANK_LINE() { return GetTokens(PlayscriptContentParser.BLANK_LINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLANK_LINE(int i) {
			return GetToken(PlayscriptContentParser.BLANK_LINE, i);
		}
		public TextContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContentContext textContent() {
		TextContentContext _localctx = new TextContentContext(Context, State);
		EnterRule(_localctx, 2, RULE_textContent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			textParagraph();
			State = 40;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BLANK_LINE) {
				{
				{
				State = 36;
				Match(BLANK_LINE);
				State = 37;
				textParagraph();
				}
				}
				State = 42;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 43;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PageContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParagraphContext[] paragraph() {
			return GetRuleContexts<ParagraphContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParagraphContext paragraph(int i) {
			return GetRuleContext<ParagraphContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BLANK_LINE() { return GetTokens(PlayscriptContentParser.BLANK_LINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLANK_LINE(int i) {
			return GetToken(PlayscriptContentParser.BLANK_LINE, i);
		}
		public PageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_page; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPage(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PageContext page() {
		PageContext _localctx = new PageContext(Context, State);
		EnterRule(_localctx, 4, RULE_page);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			paragraph();
			State = 50;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 46;
					Match(BLANK_LINE);
					State = 47;
					paragraph();
					}
					} 
				}
				State = 52;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParagraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SINGLE_NEWLINE() { return GetTokens(PlayscriptContentParser.SINGLE_NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_NEWLINE(int i) {
			return GetToken(PlayscriptContentParser.SINGLE_NEWLINE, i);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paragraph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParagraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParagraphContext paragraph() {
		ParagraphContext _localctx = new ParagraphContext(Context, State);
		EnterRule(_localctx, 6, RULE_paragraph);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			line();
			State = 58;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 54;
					Match(SINGLE_NEWLINE);
					State = 55;
					line();
					}
					} 
				}
				State = 60;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SegmentContext[] segment() {
			return GetRuleContexts<SegmentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SegmentContext segment(int i) {
			return GetRuleContext<SegmentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLUS() { return GetTokens(PlayscriptContentParser.PLUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS(int i) {
			return GetToken(PlayscriptContentParser.PLUS, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 8, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			segment();
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PLUS) {
				{
				{
				State = 62;
				Match(PLUS);
				State = 63;
				segment();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SegmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TEXT() { return GetTokens(PlayscriptContentParser.TEXT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT(int i) {
			return GetToken(PlayscriptContentParser.TEXT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsumerCallContext[] consumerCall() {
			return GetRuleContexts<ConsumerCallContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsumerCallContext consumerCall(int i) {
			return GetRuleContext<ConsumerCallContext>(i);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_segment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSegment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SegmentContext segment() {
		SegmentContext _localctx = new SegmentContext(Context, State);
		EnterRule(_localctx, 10, RULE_segment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 71;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case TEXT:
					{
					State = 69;
					Match(TEXT);
					}
					break;
				case AT:
					{
					State = 70;
					consumerCall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==AT || _la==TEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextParagraphContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TextLineContext[] textLine() {
			return GetRuleContexts<TextLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextLineContext textLine(int i) {
			return GetRuleContext<TextLineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SINGLE_NEWLINE() { return GetTokens(PlayscriptContentParser.SINGLE_NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_NEWLINE(int i) {
			return GetToken(PlayscriptContentParser.SINGLE_NEWLINE, i);
		}
		public TextParagraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textParagraph; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextParagraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextParagraphContext textParagraph() {
		TextParagraphContext _localctx = new TextParagraphContext(Context, State);
		EnterRule(_localctx, 12, RULE_textParagraph);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			textLine();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SINGLE_NEWLINE) {
				{
				{
				State = 76;
				Match(SINGLE_NEWLINE);
				State = 77;
				textLine();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TEXT() { return GetTokens(PlayscriptContentParser.TEXT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT(int i) {
			return GetToken(PlayscriptContentParser.TEXT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SLASH() { return GetTokens(PlayscriptContentParser.SLASH); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLASH(int i) {
			return GetToken(PlayscriptContentParser.SLASH, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsumerCallContext[] consumerCall() {
			return GetRuleContexts<ConsumerCallContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsumerCallContext consumerCall(int i) {
			return GetRuleContext<ConsumerCallContext>(i);
		}
		public TextLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextLineContext textLine() {
		TextLineContext _localctx = new TextLineContext(Context, State);
		EnterRule(_localctx, 14, RULE_textLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 86;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case TEXT:
					{
					State = 83;
					Match(TEXT);
					}
					break;
				case SLASH:
					{
					State = 84;
					Match(SLASH);
					}
					break;
				case AT:
					{
					State = 85;
					consumerCall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 98306L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PageBreakContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLASH() { return GetToken(PlayscriptContentParser.SLASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SINGLE_NEWLINE() { return GetTokens(PlayscriptContentParser.SINGLE_NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_NEWLINE(int i) {
			return GetToken(PlayscriptContentParser.SINGLE_NEWLINE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BLANK_LINE() { return GetTokens(PlayscriptContentParser.BLANK_LINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLANK_LINE(int i) {
			return GetToken(PlayscriptContentParser.BLANK_LINE, i);
		}
		public PageBreakContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pageBreak; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPageBreak(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PageBreakContext pageBreak() {
		PageBreakContext _localctx = new PageBreakContext(Context, State);
		EnterRule(_localctx, 16, RULE_pageBreak);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BLANK_LINE || _la==SINGLE_NEWLINE) {
				{
				{
				State = 90;
				_la = TokenStream.LA(1);
				if ( !(_la==BLANK_LINE || _la==SINGLE_NEWLINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 96;
			Match(SLASH);
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BLANK_LINE || _la==SINGLE_NEWLINE) {
				{
				{
				State = 97;
				_la = TokenStream.LA(1);
				if ( !(_la==BLANK_LINE || _la==SINGLE_NEWLINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsumerCallContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(PlayscriptContentParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(PlayscriptContentParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(PlayscriptContentParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext[] argument() {
			return GetRuleContexts<ArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext argument(int i) {
			return GetRuleContext<ArgumentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(PlayscriptContentParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(PlayscriptContentParser.COMMA, i);
		}
		public ConsumerCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consumerCall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsumerCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConsumerCallContext consumerCall() {
		ConsumerCallContext _localctx = new ConsumerCallContext(Context, State);
		EnterRule(_localctx, 18, RULE_consumerCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(AT);
			State = 104;
			qualifiedName();
			State = 105;
			Match(LPAREN);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1824L) != 0)) {
				{
				State = 106;
				argument();
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 107;
					Match(COMMA);
					State = 108;
					argument();
					}
					}
					State = 113;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 116;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(PlayscriptContentParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(PlayscriptContentParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOT() { return GetTokens(PlayscriptContentParser.DOT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT(int i) {
			return GetToken(PlayscriptContentParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameContext qualifiedName() {
		QualifiedNameContext _localctx = new QualifiedNameContext(Context, State);
		EnterRule(_localctx, 20, RULE_qualifiedName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(IDENTIFIER);
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOT) {
				{
				{
				State = 119;
				Match(DOT);
				State = 120;
				Match(IDENTIFIER);
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(PlayscriptContentParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER_LITERAL() { return GetToken(PlayscriptContentParser.INTEGER_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT_LITERAL() { return GetToken(PlayscriptContentParser.FLOAT_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN_LITERAL() { return GetToken(PlayscriptContentParser.BOOLEAN_LITERAL, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptContentParserVisitor<TResult> typedVisitor = visitor as IPlayscriptContentParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 22, RULE_argument);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1824L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
